--- a/.github/workflows/build-release-image.yaml
+++ b/.github/workflows/build-release-image.yaml
@@ -28,4 +28,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: FalkorDB/redis-pod-labeler
+          tags: ${{ secrets.DOCKER_USERNAME }}/redis-pod-labeler
