--- a/.github/workflows/build-release-image.yaml
+++ b/.github/workflows/build-release-image.yaml
@@ -30,4 +30,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/falkordb-pod-labeler:${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/v') && github.ref || 'edge'}}, ${{ secrets.DOCKER_USERNAME }}/falkordb-pod-labeler:latest
+          tags: FalkorDB/falkordb-pod-labeler:${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/v') && github.ref || 'edge'}}, FalkorDB/falkordb-pod-labeler:latest
